--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="./assets/style.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-		<script src="./assets/maugallery.js"></script>
-		<script src="./assets/scripts.js"></script>
+		<script src="./script/maugallery.js" defer></script>
+		<script src="./script/scripts.js" defer></script>
 	</head>
 	
 <body>
