--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		<div class="form-container">
 			<h2>Une question ? Une demande de devis ?</h2>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post" autocomplete="on" role="form">
+			<form action="" method="post" autocomplete="on">
 				<label for="nom">Nom</label>
 				<input type="text" name="nom" id="nom" autocomplete="name" aria-required="true">
 				<label for="email">Email</label>
