--- a/index.html
+++ b/index.html
@@ -14,6 +14,84 @@
 		<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 		<script src="./script/maugallery.js" defer></script>
 		<script src="./script/scripts.js" defer></script>
+		<!-- Schema.org structured data -->
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Person",
+			  "name": "Nina Carducci",
+			  "jobTitle": "Photographe",
+			  "image": "https://www.ninacarducci.com/assets/images/nina.webp",
+			  "description": "Nina Carducci, photographe spécialisée dans les portraits, mariages et événements en Île-de-France.",
+			  "url": "https://www.ninacarducci.com",
+			  "sameAs": [
+				"https://www.instagram.com/ninacarducci.photo/?hl=fr"
+			  ],
+			  "address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"postalCode": "33200",
+				"addressCountry": "FR"
+			  },
+			  "telephone": "+33 5 56 67 78 89",
+			  "openingHoursSpecification": {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": [
+				  "Monday",
+				  "Tuesday",
+				  "Wednesday",
+				  "Thursday",
+				  "Friday"
+				],
+				"opens": "10:00",
+				"closes": "19:00"
+			  },
+			  "contactPoint": {
+				"@type": "ContactPoint",
+				"contactType": "customer service",
+				"telephone": "+33 5 56 67 78 89",
+				"email": "info@ninacarducci.com",
+				"areaServed": "FR",
+				"availableLanguage": "French"
+			  },
+			  "offers": [
+				{
+				  "@type": "Offer",
+				  "name": "Shooting photo",
+				  "description": "Shooting photo en Île-de-France pour capturer vos moments les plus précieux.",
+				  "price": "350",
+				  "priceCurrency": "EUR",
+				  "eligibleRegion": {
+					"@type": "Place",
+					"name": "Île-de-France"
+				  }
+				},
+				{
+				  "@type": "Offer",
+				  "name": "Retouches photo",
+				  "description": "Retouches professionnelles pour obtenir un rendu optimal pour vos photos.",
+				  "price": "50",
+				  "priceCurrency": "EUR",
+				  "eligibleRegion": {
+					"@type": "Place",
+					"name": "Île-de-France"
+				  }
+				},
+				{
+				  "@type": "Offer",
+				  "name": "Album photo personnalisé",
+				  "description": "Création d'un album photo personnalisé avec vos meilleurs moments.",
+				  "price": "400",
+				  "priceCurrency": "EUR",
+				  "eligibleRegion": {
+					"@type": "Place",
+					"name": "Île-de-France"
+				  }
+				}
+			  ]
+			}
+			</script>
 	</head>
 <body>
 <div class="top-header">
