implemented lazy loading for images

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
 
 	<!-- Schema.org structured data -->
 	<script type="application/ld+json">
@@ -25,8 +25,8 @@
 		], 
 		"name": "Nina Carducci", 
 		"description": "Nina Carducci, photographe freelance à Bordeaux et ses alentours", 
-		"image": "https://beseb.github.io/nina_carducci_portfolio/assets/images/nina.jpg", 
-		"url": "https://beseb.github.io/nina_carducci_portfolio/index.html", 
+		"image": "https://peran.dev/oc/oc-p4-carducci/assets/images/nina.jpg", 
+		"url": "https://peran.dev/oc/oc-p4-carducci/index.html", 
 		"address":{
 			"@type": "PostalAddress", 
 			"streetAddress": "68 avenue Alsace-Lorraine", 
@@ -44,12 +44,11 @@
 	<meta property="og:title" content="Nina Carducci - Photographe en Île-de-France" />
 	<meta property="og:description" content="Découvrez le portfolio de Nina Carducci, photographe spécialisée dans les portraits, mariages et événements en Île-de-France." />
 	<meta property="og:image" content="https://www.ninacarducci.com/assets/images/nina.jpg" />
-	<meta property="og:image:width" content="1200" /> <!-- Set the correct width of the image -->
-	<meta property="og:image:height" content="630" />  <!-- Set the correct height of the image -->
+	<meta property="og:image:width" content="1200" />
+	<meta property="og:image:height" content="630" /> 
 	<meta property="og:url" content="https://www.ninacarducci.com" />
 	<meta property="og:type" content="website" />
 	<meta property="og:locale" content="fr_FR" />
-
 
 	<!-- Twitter Card meta tags -->
 	<meta name="twitter:card" content="summary_large_image" />
@@ -61,8 +60,8 @@
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="./script/maugallery.js" defer></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script src="./script/maugallery.min.js" defer></script>
 	<script src="./script/scripts.js" defer></script>
 
 </head>
